# Line-Detection

devel/: .catkin  .rosinstall  setup.sh
devel/include/cv_test/: MsgControl.h
devel/lib/cv_test/: image_converter  listener
devel/lib/pkgconfig/: cv_test.pc
devel/lib/python2.7/dist-packages/cv_test/msg/: _MsgControl.py
devel/share/common-lisp/ros/cv_test/msg/: MsgControl.lisp  _package.lisp  _package_MsgControl.lisp  cv_test-msg.asd
devel/share/cv_test/cmake/: cv_test-msg-paths.cmake  cv_testConfig.cmake
src/cv_test/: CMakeLists.txt
src/cv_test/src/: image_converter.cpp  listener.cpp
